--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
         "jwt-decode": "^4.0.0",
         "multer": "^2.0.2",
         "npm": "^11.6.3",
-        "prisma": "^6.18.0"
+        "prisma": "^6.18.0",
+        "stripe": "^20.0.0"
     }
 }
