feat: implement AI-powered product description generation for new products.

--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
         "jwt-decode": "^4.0.0",
         "multer": "^2.0.2",
         "npm": "^11.6.3",
+        "openai": "^6.9.1",
         "prisma": "^6.18.0",
         "stripe": "^20.0.0"
     }
